2013-09-29	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.0:
		- keep in sync with stable release .97

2013-09-24	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.0:
		- keep in sync with stable release .96
	* Kernel 3.2:
		- keep in sync with stable release .51
	* Kernel 3.4:
		- keep in sync with stable release .62
	* Kernel 3.10:
		- keep in sync with stable release .12

2013-08-30	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.0:
		- keep in sync with stable release .94
	* Kernel 3.4:
		- keep in sync with stable release .60
	* Kernel 3.10:
		- keep in sync with stable release .10

2013-08-21	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.10:
		- keep in sync with stable release .9

2013-08-20	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.0:
		- keep in sync with stable release .93
	* Kernel 3.4:
		- keep in sync with stable release .59
	* Kernel 3.10:
		- keep in sync with stable release .8

2013-08-09	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.5:
		- back to development
		- fix a cache flush issue for ARMv4 CPUs
	* Kernel 3.6:
		- back to development
		- fix a cache flush issue for ARMv4 CPUs
	* Kernel 3.7:
		- fix a cache flush issue for ARMv4 CPUs
	* Kernel 3.8:
		- fix a cache flush issue for ARMv4 CPUs
	* Kernel 3.9:
		- fix a cache flush issue for ARMv4 CPUs

2013-08-05	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.0:
		- keep in sync with stable release .89
	* Kernel 3.2:
		- keep in sync with stable release .50
	* Kernel 3.4:
		- keep in sync with stable release .56
	* Kernel 3.9:
		- end of life reached
	* Kernel 3.10:
		- keep in sync with stable release .5

2013-07-22	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.0:
		- keep in sync with stable release .87
	* Kernel 3.2:
		- keep in sync with stable release .48
	* Kernel 3.4:
		- keep in sync with stable release .54
	* Kernel 3.9:
		- keep in sync with stable release .11
	* Kernel 3.10:
		- Use most recent Linux release
		- keep in sync with stable release .2
