@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.62-ptx-master Kernel Configuration
+# Linux/arm 3.4.63-ptx-master Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
