@@ -17,7 +17,7 @@ Index: linux-3.4/drivers/net/ethernet/davicom/dm9000.c
 ===================================================================
 --- linux-3.4.orig/drivers/net/ethernet/davicom/dm9000.c
 +++ linux-3.4/drivers/net/ethernet/davicom/dm9000.c
-@@ -1063,6 +1063,7 @@ static irqreturn_t dm9000_interrupt(int 
+@@ -1167,6 +1167,7 @@ static irqreturn_t dm9000_interrupt(int 
  	int int_status;
  	unsigned long flags;
  	u8 reg_save;
@@ -25,7 +25,7 @@ Index: linux-3.4/drivers/net/ethernet/davicom/dm9000.c
  
  	dm9000_dbg(db, 3, "entering %s\n", __func__);
  
-@@ -1085,17 +1086,22 @@ static irqreturn_t dm9000_interrupt(int 
+@@ -1189,17 +1190,22 @@ static irqreturn_t dm9000_interrupt(int 
  		dev_dbg(db->dev, "interrupt status %02x\n", int_status);
  
  	/* Received the coming packet */
@@ -50,7 +50,7 @@ Index: linux-3.4/drivers/net/ethernet/davicom/dm9000.c
  		}
  	}
  
-@@ -1107,7 +1113,7 @@ static irqreturn_t dm9000_interrupt(int 
+@@ -1211,7 +1217,7 @@ static irqreturn_t dm9000_interrupt(int 
  
  	spin_unlock_irqrestore(&db->lock, flags);
  
