@@ -38,7 +38,7 @@ list of currently available Linux kernel releases in the \ptxdistBSPName{}:
 	\item 3.7 *), stable patch level 10
 	\item 3.6 *), stable patch level 11
 	\item 3.5 *), stable patch level 7
-	\item 3.4, stable patch level 62
+	\item 3.4, stable patch level 63
 	\item 3.3 *), stable patch level 8
 	\item 3.2, stable patch level 51
 	\item 3.1 *), stable patch level 10
