@@ -50,7 +50,7 @@ Base System
 [ ] kernel-3.7.10 is a release
 [ ] kernel-3.6.11 is a release
 [ ] kernel-3.5.7 is a release
-[ ] kernel-3.4.62 is a release
+[ ] kernel-3.4.63 is a release
 [x] kernel-3.3.8 is a release
 [ ] kernel-3.2.51 is a release
 [x] kernel-3.1.10 is a release
