@@ -2,6 +2,8 @@
 
 	* Kernel 3.0:
 		- keep in sync with stable release .97
+	* Kernel 3.4:
+		- keep in sync with stable release .63
 
 2013-09-24	Juergen Beisert <jbe@pengutronix.de
 
